# translucid

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.ini
nbs/: 01_hooks.ipynb  02_objectives.ipynb  03_images.ipynb  index.ipynb  objectives.ipynb  opt.ipynb
translucid/: _modidx.py  opt.py  utils.py
translucid/opt/: __init__.py  hooks.py  objectives.py  visualize.py
translucid/param/: image.py
