[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "translucid"
version = "0.1.0"
dependencies = [
    "torch",
    "torchvision",
    "fastcore",
    "fastprogress"
]

optional-dependencies = { "dev"= [
    "nbdev"] }

[tool.setuptools]
packages = ["translucid"]
package-dir ={ "translucid" = "translucid" }